# mysql-dds

./: .gitignore  CMakeLists.txt  Gemfile  README.md  install-dds.sql
.github/workflows/: licensing.yml
doc/: dependency_decisions.yml
ruby/: mysql.rb  sketch.rb
script/: benchmark  build  install  integration-test  release  unit-test
src/: dds.cc  dds.h  dds_test.cc
